Closed Bug 303185 Opened 21 years ago Closed 21 years ago

xpcom/glue/nsVersionComparator.cpp: const char * mismatch in VS2005

Categories

(Core :: XPCOM, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.8beta4

People

(Reporter: mmoy, Assigned: benjamin)

References

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.2 x64; en-US; rv:1.8b3) Gecko/20050801 mmoy CE Deer Park Alpha 2 K8M/64-X07 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.2 x64; en-US; rv:1.8b3) Gecko/20050801 mmoy CE Deer Park Alpha 2 K8M/64-X07 MSVC 2005 (Whidbey) complains about char *numstart = strpbrk(result.strB, "0123456789+-"); with the usual cannot convert from 'const char *' to 'char *' This is on a Firefox trunk build with current source. Reproducible: Always
This fixes the problem with my build.
Summary: xpcom/glue/nsVersionComparator.cpp: const char * mismatch → xpcom/glue/nsVersionComparator.cpp: const char * mismatch in VS2005
Assignee: nobody → dougt
Blocks: 300731
Component: General → XPCOM
Product: Firefox → Core
QA Contact: general → xpcom
Version: unspecified → Trunk
Comment on attachment 191438 [details] [diff] [review] nsVersionComparator.cpp This looks good to me. r=darin
Attachment #191438 - Flags: review+
-> bsmedberg
Assignee: dougt → benjamin
Status: UNCONFIRMED → NEW
Ever confirmed: true
Attachment #191438 - Flags: approval1.8b4+
Fixed on trunk for 1.8b4
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.8beta4
*** Bug 302456 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: