Bug 303185 - const char* mismatch in VS2005 patch by Michael Moy <mmoy@yahoo.com> r=darin a=me